testing/errors/recursive-src.a
	!src "recursive-src.a"	; -> "Too deeply nested. Recursive "!source"?"
